fix: remove fictional features from docs, rename docker org, fix JS SDK metrics bug, fix integrations page
- Docs: remove all fictional features (multivariate flags, A/B tests, named strategies Default/Gradual/Scheduled/Custom, PAUSED lifecycle, Slack/Datadog/GitHub Actions integration examples, HMAC signatures, retry logic, 20+ nonexistent operators, getFlagValue/getFlagEvaluation methods, 30s polling)

- Config: rename Docker org edgar-dev20 to mozhno-dev across 24 files (Dockerfile, docker-compose, k8s, README, CI, SDK build)

- JS SDK: fix metrics format bug — send {t, f} objects instead of flat numbers matching server's ClientMetricsRequest expectation

- Web: fix empty integrations page (add projectLoading/isError states, i18n keys)

- Docs: fix vitepress SSR crash on {{ }} template syntax in integrations.md

- Docs: fix Maven to Gradle references, api/sdk/flags to api/client/features, Spring Boot 3.x to 4.0

68 files, -4099 +2127