@@ -8,12 +8,8 @@
 
 ```
 k8s/
-├── deployment.yaml
-├── service.yaml
-├── hpa.yaml
-├── pdb.yaml
-├── configmap.yaml
-└── secrets.yaml
+├── deployment.yaml    — Deployment + Service + PDB + HPA
+└── config.yaml        — Secrets + ConfigMap
 ```
 
 Применение:
@@ -28,7 +24,7 @@ kubectl apply -f k8s/
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mozhno
+  name: mozhno-server
   labels:
     app: mozhno
 spec:
@@ -46,45 +42,57 @@ spec:
       labels:
         app: mozhno
     spec:
-      serviceAccountName: mozhno
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
-        fsGroup: 1000
-        readOnlyRootFilesystem: true
+      terminationGracePeriodSeconds: 45
       containers:
         - name: mozhno
           image: ghcr.io/mozhno-dev/mozhno:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
-              protocol: TCP
-          envFrom:
-            - configMapRef:
-                name: mozhno-config
-            - secretRef:
-                name: mozhno-secrets
+              name: http
           env:
-            - name: JAVA_OPTS
-              value: >
-                -XX:+UseZGC
-                -XX:MaxRAMPercentage=75
-                -XX:+ZGenerational
-                -XX:ConcGCThreads=4
-                -Djava.security.egd=file:/dev/./urandom
+            - name: JAVA_TOOL_OPTIONS
+              value: "-XX:+UseZGC -XX:MaxRAMPercentage=75.0"
+            - name: SPRING_DATASOURCE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: mozhno-db
+                  key: url
+            - name: SPRING_DATASOURCE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: mozhno-db
+                  key: username
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mozhno-db
+                  key: password
+            - name: JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: mozhno-jwt
+                  key: secret
+            - name: APP_BASE_URL
+              value: "https://flags.example.com"
+            - name: HIKARI_MAX_POOL_SIZE
+              value: "30"
+            - name: HIKARI_MIN_IDLE
+              value: "5"
           resources:
             requests:
-              memory: '512Mi'
-              cpu: '250m'
+              memory: "512Mi"
+              cpu: "250m"
             limits:
-              memory: '2Gi'
-              cpu: '2000m'
+              memory: "2Gi"
+              cpu: "2000m"
           readinessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
-            initialDelaySeconds: 20
-            periodSeconds: 5
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 3
             failureThreshold: 3
           livenessProbe:
             httpGet:
@@ -92,14 +100,23 @@ spec:
               port: 8080
             initialDelaySeconds: 60
             periodSeconds: 15
-            failureThreshold: 3
+            timeoutSeconds: 5
+            failureThreshold: 5
           startupProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             initialDelaySeconds: 10
             periodSeconds: 5
+            timeoutSeconds: 3
             failureThreshold: 30
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
 ```
 
 ### Параметры развёртывания
@@ -109,25 +126,21 @@ spec:
 | `replicas` | 2 | Минимальная избыточность для высокой доступности |
 | `maxUnavailable` | 0 | Ни один под не выключается во время обновления (zero-downtime) |
 | `maxSurge` | 1 | Допускается один дополнительный под при rolling update |
+| `terminationGracePeriodSeconds` | 45 | Время на корректное завершение перед принудительной остановкой |
 | `memory requests` | 512Mi | Минимальный запас памяти для JVM и кешей |
 | `memory limits` | 2Gi | Верхняя граница с учётом MaxRAMPercentage=75 (~1.5G для heap) |
 | `cpu requests` | 250m | Гарантированная доля CPU для отзывчивости |
 | `cpu limits` | 2000m | Потолок CPU для пиковых нагрузок |
 | `runAsNonRoot` | true | Запуск от непривилегированного пользователя |
 | `runAsUser` | 1000 | UID пользователя `mozhno` внутри контейнера |
-| `readOnlyRootFilesystem` | true | Защита от записи в корневую ФС |
-
-### Стратегия обновления
-
-RollingUpdate с `maxUnavailable: 0` гарантирует, что в любой момент времени доступен хотя бы один под. Новый под (`maxSurge: 1`) запускается и проходит readiness-пробу до того, как старый будет остановлен. Это обеспечивает zero-downtime деплой.
+| `allowPrivilegeEscalation` | false | Запрет повышения привилегий |
+| `capabilities.drop` | ALL | Удаление всех Linux capabilities |
 
 ### JVM и ZGC
 
 ```bash
--XX:+UseZGC              # Z Garbage Collector — сверхнизкие паузы (< 1 мс)
--XX:MaxRAMPercentage=75  # JVM не превышает 75% от лимита памяти контейнера
--XX:+ZGenerational       # Поколенческий режим ZGC (JDK 25+)
--XX:ConcGCThreads=4      # Фиксированное число потоков GC
+-XX:+UseZGC               # Z Garbage Collector — сверхнизкие паузы (< 1 мс)
+-XX:MaxRAMPercentage=75.0  # JVM не превышает 75% от лимита памяти контейнера
 ```
 
 При лимите в 2Gi JVM выделит не более 1.5 GiB под heap. Оставшаяся память — для Metaspace, JIT-компилятора, стека потоков и нативных библиотек.
@@ -143,6 +156,7 @@ startupProbe:
     port: 8080
   initialDelaySeconds: 10
   periodSeconds: 5
+  timeoutSeconds: 3
   failureThreshold: 30    # до 150 секунд на первый запуск
 ```
 
@@ -155,12 +169,13 @@ readinessProbe:
   httpGet:
     path: /actuator/health
     port: 8080
-  initialDelaySeconds: 20
-  periodSeconds: 5
+  initialDelaySeconds: 30
+  periodSeconds: 10
+  timeoutSeconds: 3
   failureThreshold: 3
 ```
 
-Определяет, готов ли под принимать трафик. При провале трёх проверок под исключается из Service — новые запросы к нему не направляются. Восстанавливается автоматически при возвращении `UP`.
+Определяет, готов ли под принимать трафик. При провале трёх проверок под исключается из Service. Восстанавливается автоматически при возвращении `UP`.
 
 ### livenessProbe
 
@@ -171,10 +186,11 @@ livenessProbe:
     port: 8080
   initialDelaySeconds: 60
   periodSeconds: 15
-  failureThreshold: 3
+  timeoutSeconds: 5
+  failureThreshold: 5
 ```
 
-Обнаруживает зависшие или deadlocked поды. При трёх последовательных провалах (45 секунд) kubelet перезапускает контейнер.
+Обнаруживает зависшие или deadlocked поды. При пяти последовательных провалах (75 секунд) kubelet перезапускает контейнер.
 
 ## Horizontal Pod Autoscaler (HPA)
 
@@ -187,7 +203,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: mozhno
+    name: mozhno-server
   minReplicas: 2
   maxReplicas: 8
   metrics:
@@ -203,19 +219,6 @@ spec:
         target:
           type: Utilization
           averageUtilization: 80
-  behavior:
-    scaleDown:
-      stabilizationWindowSeconds: 300
-      policies:
-        - type: Percent
-          value: 50
-          periodSeconds: 60
-    scaleUp:
-      stabilizationWindowSeconds: 60
-      policies:
-        - type: Percent
-          value: 100
-          periodSeconds: 30
 ```
 
 ### Параметры масштабирования
@@ -226,9 +229,6 @@ spec:
 | `maxReplicas` | 8 | Ограничение расхода ресурсов кластера |
 | CPU target | 70% | Упреждающее масштабирование до насыщения CPU |
 | Memory target | 80% | Защита от OOMKill до срабатывания лимитов |
-| `scaleDown.stabilizationWindowSeconds` | 300 | 5 минут ожидания перед уменьшением (избегание flapping) |
-| `scaleDown.policies` | 50%/мин | Не более 50% подов в минуту при уменьшении |
-| `scaleUp.policies` | 100%/30с | Быстрая реакция на рост нагрузки |
 
 ## Pod Disruption Budget (PDB)
 
@@ -244,7 +244,7 @@ spec:
       app: mozhno
 ```
 
-Гарантирует, что минимум 1 под всегда доступен при добровольных нарушениях (drain ноды, обновление кластера). Это особенно важно для zero-downtime.
+Гарантирует, что минимум 1 под всегда доступен при добровольных нарушениях (drain ноды, обновление кластера).
 
 ## Service
 
@@ -252,7 +252,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mozhno
+  name: mozhno-server
   labels:
     app: mozhno
 spec:
@@ -260,7 +260,6 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
-      protocol: TCP
       name: http
   selector:
     app: mozhno
@@ -295,9 +294,83 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: mozhno
+                name: mozhno-server
                 port:
                   number: 8080
+```
+
+## Secrets
+
+Секреты разделены на два объекта для раздельного управления:
+
+```yaml
+apiVersion: v1
+kind: Secret
+metadata:
+  name: mozhno-db
+  labels:
+    app: mozhno
+type: Opaque
+stringData:
+  url: "jdbc:postgresql://postgres-service:5432/feature_flags"
+  username: "flags_user"
+  password: "change-me"
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: mozhno-jwt
+  labels:
+    app: mozhno
+type: Opaque
+stringData:
+  secret: ""
+```
+
+Для продакшен-окружения используйте Sealed Secrets или External Secrets Operator:
+
+```yaml
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: mozhno-db
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: vault-backend
+    kind: ClusterSecretStore
+  target:
+    name: mozhno-db
+  data:
+    - secretKey: url
+      remoteRef:
+        key: secret/mozhno
+        property: db_url
+    - secretKey: username
+      remoteRef:
+        key: secret/mozhno
+        property: db_username
+    - secretKey: password
+      remoteRef:
+        key: secret/mozhno
+        property: db_password
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: mozhno-jwt
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: vault-backend
+    kind: ClusterSecretStore
+  target:
+    name: mozhno-jwt
+  data:
+    - secretKey: secret
+      remoteRef:
+        key: secret/mozhno
+        property: jwt_secret
 ```
 
 ## ConfigMap
@@ -307,172 +380,33 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mozhno-config
+  labels:
+    app: mozhno
 data:
-  SERVER_PORT: '8080'
-  APP_BASE_URL: 'https://flags.example.com'
-
-  SPRING_DATASOURCE_URL: 'jdbc:postgresql://postgres.db.svc.cluster.local:5432/feature_flags'
-  SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE: '30'
-  SPRING_DATASOURCE_HIKARI_MINIMUM_IDLE: '5'
-  SPRING_DATASOURCE_HIKARI_CONNECTION_TIMEOUT: '30000'
-  SPRING_DATASOURCE_HIKARI_IDLE_TIMEOUT: '600000'
-
-  JWT_ACCESS_TOKEN_EXPIRATION: '900000'
-  JWT_REFRESH_TOKEN_EXPIRATION: '604800000'
-  JWT_REFRESH_TOKEN_ROTATION_ENABLED: 'true'
-
-  SPRING_FLYWAY_ENABLED: 'true'
-  SPRING_FLYWAY_LOCATIONS: 'classpath:db/migration'
+  APP_BASE_URL: "https://flags.example.com"
+  CLIENT_MAX_METRICS_PER_KEY: "1000"
+  HIKARI_MAX_POOL_SIZE: "30"
+  HIKARI_MIN_IDLE: "5"
+  CACHE_TTL_MINUTES: "5"
+  LOG_LEVEL_APP: "INFO"
 ```
 
-Несекретные настройки выносятся в ConfigMap. Это позволяет изменять конфигурацию без пересборки образа — достаточно обновить ConfigMap и перезапустить поды:
+Несекретные настройки выносятся в ConfigMap. Для перезапуска подов при изменении:
 
 ```bash
-kubectl rollout restart deployment/mozhno
-```
-
-Альтернативно используйте [Reloader](https://github.com/stakater/Reloader) для автоматического перезапуска подов при изменении ConfigMap.
-
-## Secrets
-
-```yaml
-apiVersion: v1
-kind: Secret
-metadata:
-  name: mozhno-secrets
-type: Opaque
-stringData:
-  SPRING_DATASOURCE_USERNAME: 'flags_user'
-  SPRING_DATASOURCE_PASSWORD: '<secure-password>'
-  JWT_SECRET: '<256-bit-secret>'
-```
-
-Секреты хранятся в Kubernetes Secret и монтируются в под как переменные окружения через `secretRef`. Для продакшен-окружения рекомендуется использовать:
-
-- **Sealed Secrets** от Bitnami — шифрованные секреты, которые можно хранить в Git
-- **External Secrets Operator** — синхронизация с AWS Secrets Manager, HashiCorp Vault или GCP Secret Manager
-- **SOPS** от Mozilla — шифрование YAML/JSON файлов с интеграцией в GitOps
-
-### Sealed Secrets
-
-```bash
-kubeseal --format yaml < mozhno-secrets.yaml > mozhno-sealed-secrets.yaml
-kubectl apply -f mozhno-sealed-secrets.yaml
-```
-
-### External Secrets Operator
-
-```yaml
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: mozhno
-spec:
-  refreshInterval: 1h
-  secretStoreRef:
-    name: vault-backend
-    kind: ClusterSecretStore
-  target:
-    name: mozhno-secrets
-  data:
-    - secretKey: JWT_SECRET
-      remoteRef:
-        key: secret/mozhno
-        property: jwt_secret
-    - secretKey: SPRING_DATASOURCE_PASSWORD
-      remoteRef:
-        key: secret/mozhno
-        property: db_password
-```
-
-## ServiceAccount и RBAC
-
-```yaml
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: mozhno
-```
-
-Если приложению не требуется доступ к Kubernetes API, не назначайте RBAC-ролей. ServiceAccount создаётся явно для возможности будущего расширения (например, интеграции с метриками).
-
-## NetworkPolicy
-
-Для ограничения сетевого взаимодействия:
-
-```yaml
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: mozhno
-spec:
-  podSelector:
-    matchLabels:
-      app: mozhno
-  policyTypes:
-    - Ingress
-    - Egress
-  ingress:
-    - from:
-        - namespaceSelector:
-            matchLabels:
-              name: ingress-nginx
-      ports:
-        - port: 8080
-  egress:
-    - to:
-        - podSelector:
-            matchLabels:
-              app: postgres
-      ports:
-        - port: 5432
-```
-
-Разрешает входящий трафик только от Ingress-контроллера и исходящий — только к PostgreSQL.
-
-## Диаграмма компонентов
-
-```mermaid
-graph TB
-    INGRESS[Ingress<br/>nginx + cert-manager]
-    SVC[Service<br/>ClusterIP :8080]
-    PDB[PodDisruptionBudget<br/>minAvailable: 1]
-    HPA[HPA<br/>min 2 / max 8]
-
-    subgraph "Deployment"
-        P1[mozhno pod-1<br/>ZGC, 512Mi/2Gi]
-        P2[mozhno pod-2<br/>ZGC, 512Mi/2Gi]
-    end
-
-    CM[ConfigMap]
-    SEC[Secrets]
-    PG[(PostgreSQL<br/>StatefulSet)]
-
-    INGRESS --> SVC
-    SVC --> P1
-    SVC --> P2
-    HPA --> P1
-    HPA --> P2
-    PDB --> P1
-    PDB --> P2
-    P1 --> CM
-    P1 --> SEC
-    P2 --> CM
-    P2 --> SEC
-    P1 --> PG
-    P2 --> PG
+kubectl rollout restart deployment/mozhno-server
 ```
 
 ## Проверка развёртывания
 
 ```bash
 kubectl get pods -l app=mozhno
-kubectl get svc mozhno
+kubectl get svc mozhno-server
 kubectl get hpa mozhno-hpa
 kubectl describe pdb mozhno-pdb
 
 kubectl logs -l app=mozhno --tail=50
-kubectl port-forward svc/mozhno 8080:8080
+kubectl port-forward svc/mozhno-server 8080:8080
 curl localhost:8080/actuator/health
 ```
 
